# GenVoice

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
app/: __init__.py  create_invoice.py  get_bank_instructions.py  invoicees.py  main.py  template.py
app/schedules/: address.py  bank_instructions.py  invoice.py  invoicee.py
app/templates/: invoice.html
config/: config.toml
demo/: trial.toml
json/: new_invoice.json
src/genvoice/: .env.example  __init__.py  db.py  processor.py
src/genvoice/schedules/: __init__.py  address.py  bank_instructions.py  invoice.py  payment_link.py
src/genvoice/templates/: invoice.html
templates/: invoice.html  service-invoice-payment_link.html  service-invoice.html  time-invoice.html
tests/: test_args.py  test_bank_account_instructions.py  test_database.py  test_invoice_totals.py  test_invoicee.py  test_invoices.py  test_main.py  test_processor.py
utils/: check_invoices.py  setup_db.py
