[project]
name = "genvoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "jinja2>=3.1.4",
    "pydantic>=2.9.2",
    "weasyprint>=63.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.genvoice]
bank_instructions_path = 'private/my_bank_instructions.toml'
invoicees_path = 'private/invoicees.toml'
invoicer_path = 'private/invoicer.toml'
invoice_data_path = 'json/new_invoice.json'
invoice_template_path = 'app/templates/invoice.html'
out_dir = 'out/'
