[project]
name = "genvoice"
version = "0.1.0"
description = "Generate invoices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "jinja2>=3.1.4",
    "pydantic>=2.9.2",
    "weasyprint>=63.0",
]

[project.scripts]
genvoice = "genvoice:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["app"]

